<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".DifficultySelection">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/imgbutton_help"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            app:tint="#FFFFFF"
            android:src="@android:drawable/ic_menu_help" />

        <ImageButton
            android:id="@+id/imgbutton_sound"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:tint="#FFFFFF"
            android:src="@drawable/icon_speaker" />
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="225dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="29sp"
        style="@style/white_txt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gamemode_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="24sp"
        style="@style/white_txt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/select_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gamemode_selected"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/select_dialog"
        android:textSize="20sp"
        style="@style/white_txt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="184dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <android.widget.Button
            android:id="@+id/button_easy"
            style="@style/custom_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/difficulty_1" />

        <android.widget.Button
            android:id="@+id/button_normal"
            style="@style/custom_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/difficulty_2" />

        <android.widget.Button
            android:id="@+id/button_hard"
            style="@style/custom_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/difficulty_3" />

        <android.widget.Button
            android:id="@+id/button_back"
            style="@style/custom_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Back" />
    </LinearLayout>

</RelativeLayout>
